# rattling

./: README.md  demo.py  pyproject.toml
src/rattling/: __init__.py
src/rattling/api/: __init__.py
src/rattling/cli/: demo.py
src/rattling/data/: sample.extxyz  sample_fc.npy
test/: test_rattling.py
test/data/graphene_441/: force_constants.npy  ref_phonon_modes.json  ref_phonon_rattle.json  supercell.extxyz
